--- a/demo/views/demo.erb
+++ b/demo/views/demo.erb
@@ -1,5 +1,8 @@
 <div>
   <center>
+    <h3><%= network.capitalize %></h3>
+  </center>
+  <center>
     Send <b><%= price %></b> to <b><%= address %></b> and get back NFT from Vendi!
   </center>
   <br/>
