add policy id link to demo

--- a/demo/views/demo.erb
+++ b/demo/views/demo.erb
@@ -7,6 +7,10 @@
   </center>
   <br/>
   <center>
+    Policy id: <a target="_blank" href="https://<%= network %>.cexplorer.io/policy/<%= policy_id %>"><%= policy_id %></a>.
+  </center>
+  <br/>
+  <center>
     Hurry up there are only <b><span id="in_stock"></span></b> NFTs left!
   </center>
   <br/>
