--- a/demo/views/layout.erb
+++ b/demo/views/layout.erb
@@ -73,7 +73,7 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="position-sticky pt-3 sidebar-sticky">
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-          <span>Vendi Demo</span>
+          <span>Vendi Demo (v<%= Vendi::VERSION %>)</span>
         </h6>
         <ul class="nav flex-column">
           <li class="nav-item">
